--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,29 +45,29 @@ jobs:
       - name: Run formatter check
         run: ./dotnet-format-local/dotnet-format --check
 
-  build-and-test:
-    name: Build & Test
-    runs-on: ubuntu-latest
-    needs: calculate-version
-    env:
-      LBHPACKAGESTOKEN: ${{secrets.LBHPACKAGESTOKEN }}
-    outputs:
-      version: ${{ needs.calculate-version.outputs.version }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build
-        run: docker-compose build hackney-shared-housing-search-test
-      - name: Run tests
-        run: docker-compose run hackney-shared-housing-search-test
+  # build-and-test:
+  #   name: Build & Test
+  #   runs-on: ubuntu-latest
+  #   needs: calculate-version
+  #   env:
+  #     LBHPACKAGESTOKEN: ${{secrets.LBHPACKAGESTOKEN }}
+  #   outputs:
+  #     version: ${{ needs.calculate-version.outputs.version }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Build
+  #       run: docker-compose build hackney-shared-housing-search-test
+  #     - name: Run tests
+  #       run: docker-compose run hackney-shared-housing-search-test
 
   publish-package:
     name: Publish Package
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: calculate-version
     env:
       LBHPACKAGESTOKEN: ${{secrets.LBHPACKAGESTOKEN }}
-      VERSION: ${{ needs.build-and-test.outputs.version }}
+      VERSION: ${{ needs.calculate-version.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
