--- a/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
+++ b/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
@@ -9,4 +9,9 @@
    <Description>Shared Library for Housing Search service</Description>
    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
  </PropertyGroup>
+
+ <ItemGroup>
+   <PackageReference Include="NEST" Version="7.11.1" />
+ </ItemGroup>
+
 </Project>
