--- a/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
+++ b/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
@@ -11,6 +11,7 @@
  </PropertyGroup>
 
  <ItemGroup>
+   <PackageReference Include="Hackney.Shared.Tenure" Version="0.9.0" />
    <PackageReference Include="NEST" Version="7.11.1" />
  </ItemGroup>
 
