--- a/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
+++ b/Hackney.Shared.HousingSearch/Hackney.Shared.HousingSearch.csproj
@@ -13,6 +13,7 @@
    <PackageReference Include="Hackney.Shared.Processes" Version="0.5.0" />
    <PackageReference Include="Hackney.Shared.Tenure" Version="0.9.0" />
    <PackageReference Include="NEST" Version="7.11.1" />
+   <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
  </ItemGroup>
 
 </Project>
