Remove redundant LBHPACKAGESTOKEN from GitHub Actions workflows
Historically we've published packages from our local machines, which requires a token
to authenticate with the GitHub Packages NuGet Registry. Now we use CI to publish
packages there is a GitHub-managed token we can use instead..

> If you're using a registry that supports granular permissions, and your workflow is using a personal access token to authenticate to the registry, then we highly recommend you update your workflow to use the GITHUB_TOKEN.
>  ~ from https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions#authenticating-to-package-registries-with-granular-permissions

This change removes both `LBHPACKAGESTOKEN` and `NUGET_KEY` tokens from
the GitHub Actions workflow, replacing them where needed with the
managed `GITHUB_TOKEN` token that's automatically made available to all
jobs.

In order to keep the local development/management experience the same,
references to `LBHPACKAGESTOKEN` have been kept as-is in the Docker and
Docker Compose setup.

Docker's documentation
[suggests](https://docs.docker.com/reference/dockerfile/#arg) not to use
build arguments to pass secrets, so this change updates the `Dockerfile`
to use [secret
mounts](https://docs.docker.com/build/building/secrets/#secret-mounts),
and the recommended way to [manage secrets in docker
compose](https://docs.docker.com/compose/how-tos/use-secrets/).

Consequences

This will allow us to remove the shared secrets in GitHub Actions:

- `NUGET_KEY`
- `LBHPACKAGESTOKEN`

At the same time, this doesn't affect the local development
workflow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,12 @@ services:
     build:
       context: .
       dockerfile: Hackney.Shared.HousingSearch.Tests/Dockerfile
-      args:
-        - LBHPACKAGESTOKEN=${LBHPACKAGESTOKEN}
+
+      # Mounts the secret at /run/secrets/LBHPACKAGESTOKEN.
+      # see https://docs.docker.com/compose/how-tos/use-secrets/#build-secrets
+      secrets:
+        - LBHPACKAGESTOKEN
+
+secrets:
+  LBHPACKAGESTOKEN:
+    environment: LBHPACKAGESTOKEN
